--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "client-gateway"]
 	path = client-gateway
 	url = https://github.com/GerardoICS-Microservices/client-gateway.git
+[submodule "products-microservices"]
+	path = products-microservices
+	url = https://github.com/GerardoICS-Microservices/product-microservices.git
+[submodule "orders-microservices"]
+	path = orders-microservices
+	url = https://github.com/GerardoICS-Microservices/orders-microservice.git
