Added payments microservice

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,12 @@
 CLIENT_GATEWAY_PORT=3000
+
+PAYMENTS_MICROSERVICES_PORT=3003
+
+STRIPE_SUCCESS_URL=http://localhost:3003/payments/success
+STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
+
+# This is the signing secret that was generated when you created the webhook endpoint
+# https://dashboard.stripe.com/test/webhooks/we_1P0A5ZESf0foNBF8dT7JtIaT
+STRIPE_ENDPOINT_SECRET=
+
+STRIPE_SECRET_KEY=
