--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "payments-microservices"]
 	path = payments-microservices
 	url = https://github.com/GerardoICS-Microservices/payments-microservices.git
+[submodule "auth-microservices"]
+	path = auth-microservices
+	url = https://github.com/GerardoICS-Microservices/auth-microservices.git
