--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,6 @@ STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
 STRIPE_ENDPOINT_SECRET=
 
 STRIPE_SECRET_KEY=
+
+# NATS_SERVERS="nats://localhost:4222, nats://localhost:4223"
+NATS_SERVERS="nats://localhost:4222"
