Update environment variables and Docker configuration

--- a/.env.template
+++ b/.env.template
@@ -13,3 +13,9 @@ STRIPE_SECRET_KEY=
 
 # NATS_SERVERS="nats://localhost:4222, nats://localhost:4223"
 NATS_SERVERS="nats://localhost:4222"
+
+AUTH_DATABASE_URL="mongodb://localhost:27017/auth"
+
+JWT_SECRET=SecretKey
+
+ORDERS_DATABASE_URL=postgress://localhost:5432/orders
