--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -18,7 +18,7 @@ services:
     build: 
       context: ./client-gateway
       dockerfile: dockerfile.prod
-    image: client-gateway-prod
+    image: us-west1-docker.pkg.dev/microservices-store-419406/image-registry/client-gateway
     # ports:
     #   - '${CLIENT_GATEWAY_PORT}:${CLIENT_GATEWAY_PORT}'
     environment:
@@ -33,7 +33,7 @@ services:
     build: 
       context: ./products-microservices
       dockerfile: dockerfile.prod
-    image: products-microservices-prod
+    image: us-west1-docker.pkg.dev/microservices-store-419406/image-registry/products-microservice
     environment:
       - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
@@ -49,7 +49,7 @@ services:
       dockerfile: dockerfile.prod
       args:
         ORDERS_DATABASE_URL: ${ORDERS_DATABASE_URL}
-    image: orders-microservices-prod
+    image: us-west1-docker.pkg.dev/microservices-store-419406/image-registry/orders-microservice
     environment:
       - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
@@ -75,7 +75,7 @@ services:
     build: 
       context: ./auth-microservices
       dockerfile: dockerfile.prod
-    image: auth-microservices-prod
+    image: us-west1-docker.pkg.dev/microservices-store-419406/image-registry/auth-microservice
     environment:
       - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
@@ -86,11 +86,10 @@ services:
   #? PAYMENTS MICROSERVICE
   #? ==================================
   payments-microservices:
-    container_name: payments-microservices
     build: 
       context: ./payments-microservices
       dockerfile: dockerfile.prod
-    image: payments-microservices-prod
+    image: us-west1-docker.pkg.dev/microservices-store-419406/image-registry/payments-microservice
     ports:
       - ${PAYMENTS_MICROSERVICES_PORT}:${PAYMENTS_MICROSERVICES_PORT}
     environment:
